--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "token": "MTI1OTYzNTM3ODAxMzYwNTkyOQ.GcuS15.rWP6E0vLM5REULZIQ5YBIOVokRUcnICthDigtU",
+  "token": "MTI1OTYzNTM3ODAxMzYwNTkyOQ.G2OLw7.FqCGFZsC5nTVGda85yqYieQBJS3P1K2XeczZ9o",
   "testTokens": [
-    "MTI1OTczMDA1OTU1MjQ4OTQ4Mw.GPVZ0X.rBU_rCM1OSTl-2tGrTZzw-GTf0KrDh48-UrI2s",
-    "MTI1OTYzNTI0NDg1NjkwMTY3Mw.GKcwXd.BFavp9TQehULktO7qrNDUKyfs0HVyqpBIVuE_w",
-    "MTI1OTY2MzQ4NTMwNzA2MDMwNA.GhsWn9.0cPVgQMViVfh56VNe5sLEQOv9L7yYHSWMTsLSE",
-    "MTI1OTY2MzYwNzA4MDQyMzU1Ng.G1A3yL.iWA2H1p1Axxpz8y8GmUGWChUXrtfu-Sy_qFzoc"
+    "MTI1OTczMDA1OTU1MjQ4OTQ4Mw.GMAMq0._FlnZABgqa5NjEC0TBp8PlKCEOeX9vp72aR1uQ",
+    "MTI1OTYzNTI0NDg1NjkwMTY3Mw.GutncN._M2-BlDg6jse3jHodpWM1FTejmFX4Jpzb0dgBM",
+    "MTI1OTY2MzQ4NTMwNzA2MDMwNA.GNCrau.u257ysPrW7KUiM784dWkUvP_VXR1gNGBlt_b14",
+    "MTI1OTY2MzYwNzA4MDQyMzU1Ng.GJ0lny.nwUsyV6MqFOrqwERuoSUJy4cC_ghK0D_3H5H4M"
   ],
   "adminUserId": "497917003294703620"
 }
